# necroflow

./: .dockerignore  .gitignore  AI.md  CITATION.cff  CLAUDE.md  COMPARISON.md  Makefile  README.md  ai.md  bioconda.md  features.txt  norules.md  pyproject.toml  todo.md
.claude/commands/: necroflow-style.md
.claude/skills/add-a-rule/: SKILL.md
.claude/skills/debug-stale-classification/: SKILL.md
.claude/skills/necroflow-style/: SKILL.md
.claude/skills/write-a-scheduler/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: caching.md  cli.md  config-validation.md  development.md  execution.md  generated-config-files.md  job-toml.md  paper-arguments.md  release.md  rule-call-lifecycle.md  rules.md
examples/: custom_invalidation.py  necroalchemy.py  necroalchemy_factory.py  necroalchemy_grid.toml  necroalchemy_job.toml  schedulers.py  simple_dag.py
examples/callable_fingerprint/: README.md  fingerprint.py  input.txt  job.toml  pipeline.py
examples/canonical/: README.md  input.txt  job_grid.toml  pipeline.py  schema.py
examples/sage_recal/: .gitignore  Dockerfile  README.md  docker-compose.yml  generate_synthetic_data.py  pipeline.py  run.sh
examples/sage_recal/jobs/q99536_example/: job.toml
examples/sage_recal/jobs/q99536_synthetic_100/: job.toml  spectra.mgf
examples/sage_recal/scripts/: _spectra_io.py  fit_recalibration.py  recalibrate_spectra.py  select_top_precursors.py
necroflow/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini
necroflow/.github/workflows/: ci.yml
necroflow/examples/: necroalchemy.py  necroalchemy_factory.py  necroalchemy_grid.toml  schedulers.py  simple_dag.py
necroflow/src/necroflow/: __init__.py  cli.py  dag.py  executor.py  get_data_in_project_example.py  logger.py  nodes.py  pipeline.py  state_db.py
necroflow/tests/: test_classify_nodes.py  test_cli.py  test_dag_core.py  test_executor.py  test_grid.py  test_keep_going.py  test_pipeline.py  test_state_db.py
necroflow_gui/: Makefile  README.md  pyproject.toml
necroflow_gui/src/necroflow_gui/: __init__.py  app.py  example_registry.py  get_data_in_project_example.py  graph.py  registry.py  selection.py
necroflow_gui/src/necroflow_gui/cli/: main.py
necroflow_gui/tests/: test_gui_core.py
src/necroflow/: __init__.py  _compat.py  cli.py  config.py  contexts.py  dag.py  executor.py  fingerprints.py  graphviz_render.py  grid.py  keywords.py  logger.py  nodes.py  pipeline.py  rule_call.py  rules.py  schedulers.py  state_db.py
src/necroflow/templates/canonical/: job.toml  reap.toml
src/necroflow/tools/: config_set.py  count_loc.py
tests/: test_classify_nodes.py  test_cli.py  test_config_set.py  test_count_loc.py  test_dag_core.py  test_docs.py  test_executor.py  test_fingerprint_v2.py  test_grid.py  test_keep_going.py  test_package.py  test_paper_example.py  test_pipeline.py  test_sage_recal_example.py  test_state.py  test_state_db.py
tests/typing/: rule_dsl.py
todos/: callable_command_recipes.md  fingerprint_design.md  new_request_scheme.md  relativepaths.md  rules.md  tailviews.md  variadic_inputs.md
