[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="necroflow"
version="0.0.1"
description="Python pipeline framework inspired by Snakemake."
license={text="MIT"}
readme="README.md"
authors=[
    {name="MatteoLacki",email="matteo.lacki@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "tomlkit",
]

[project.scripts]
necroflow = "necroflow.cli:main"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest",
    "pytest-cov",
]


[project.urls]
homepage="https://github.com/MatteoLacki/necroflow.git"
repository="https://github.com/MatteoLacki/necroflow.git"

[tool.uv]
reinstall-package = ["necroflow"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]


[tool.setuptools.packages.find]
where = ["src"]

