[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="necroflow"
dynamic=["version"]
description="Python pipeline framework inspired by Snakemake."
license={text="MIT"}
readme="README.md"
authors=[
    {name="MatteoLacki",email="matteo.lacki@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "exceptiongroup>=1.0.0; python_version < '3.11'",
    "tomlkit",
]

[project.scripts]
necroflow = "necroflow.cli:main"
necroflow-config-set = "necroflow.tools.config_set:main"

[project.optional-dependencies]
validation = [
    "cerberus",
]
dev = [
    "black",
    "build",
    "twine",
    "pytest",
    "pytest-cov",
    "networkx",
]


[project.urls]
homepage="https://github.com/MatteoLacki/necroflow.git"
repository="https://github.com/MatteoLacki/necroflow.git"

[tool.uv]
reinstall-package = ["necroflow"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
version = {attr = "necroflow.__version__"}

[tool.setuptools.package-data]
necroflow = ["templates/canonical/*"]
