[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="necroflow_gui"
version="0.0.1"
description="Local Python GUI for selecting and running necroflow pipeline targets."
readme="README.md"
authors=[
    {name="MatteoLacki",email="matteo.lacki@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "necroflow",
]

# [project.optional-dependencies]
# dev = [
#     "twine",
#     "pytest",
# ]


[project.scripts]
necroflow-gui = "necroflow_gui.cli.main:main"

[project.urls]
homepage="https://github.com/MatteoLacki/necroflow_gui.git"
repository="https://github.com/MatteoLacki/necroflow_gui.git"

[tool.uv]
reinstall-package = ["necroflow_gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]


[tool.setuptools.packages.find]
where = ["src"]

# [tool.setuptools]
# include-package-data = true

# [tool.setuptools.package-data]
# necroflow_gui = ["data/*.csv"]
